Add statuses in oengus data
