# domain/Event/Entities/OengusMarathon.php
@@ -4,6 +4,7 @@ namespace Ome\Event\Entities;
 
 use Carbon\Carbon;
 use DateTimeInterface;
+use Ome\Event\Values\MarathonStatus;
 
 class OengusMarathon
 {
@@ -16,29 +17,41 @@ class OengusMarathon
 
     private DateTimeInterface $endAt;
 
+    private bool $submitsOpen;
+
+    private MarathonStatus $status;
+
     protected function __construct(
         string $id,
         string $name,
         DateTimeInterface $startAt,
-        DateTimeInterface $endAt
+        DateTimeInterface $endAt,
+        bool $submitsOpen,
+        MarathonStatus $status
     ) {
         $this->id = $id;
         $this->name = $name;
         $this->startAt = $startAt;
         $this->endAt = $endAt;
+        $this->submitsOpen = $submitsOpen;
+        $this->status = $status;
     }
 
     public static function createRegistered(
         string $id,
         string $name,
         DateTimeInterface $startAt,
-        DateTimeInterface $endAt
+        DateTimeInterface $endAt,
+        bool $submitsOpen,
+        MarathonStatus $status
     ): self {
         return new self(
             $id,
             $name,
             $startAt,
-            $endAt
+            $endAt,
+            $submitsOpen,
+            $status
         );
     }
 
@@ -48,7 +61,13 @@ class OengusMarathon
             $json['id'],
             $json['name'],
             Carbon::make($json['startDate']),
-            Carbon::make($json['endDate'])
+            Carbon::make($json['endDate']),
+            $json['submitsOpen'],
+            MarathonStatus::createFromCondition(
+                $json['selectionDone'],
+                $json['scheduleDone'],
+                (Carbon::make($json['endDate']) < Carbon::now())
+            )
         );
     }
 
@@ -82,5 +101,21 @@ class OengusMarathon
     public function getEndAt()
     {
         return $this->endAt;
+    }
+
+    /**
+     * Get the value of submitsOpen
+     */
+    public function getSubmitsOpen()
+    {
+        return $this->submitsOpen;
+    }
+
+    /**
+     * Get the value of status
+     */
+    public function getStatus()
+    {
+        return $this->status;
     }
 }
