# domain/Event/Entities/PartialOengusMarathon.php
@@ -3,6 +3,7 @@
 namespace Ome\Event\Entities;
 
 use DateTimeInterface;
+use Ome\Event\Values\MarathonStatus;
 
 class PartialOengusMarathon extends OengusMarathon
 {
@@ -10,8 +11,10 @@ class PartialOengusMarathon extends OengusMarathon
         string $id,
         string $name,
         DateTimeInterface $startAt,
-        DateTimeInterface $endAt
+        DateTimeInterface $endAt,
+        bool $submitsOpen,
+        MarathonStatus $status
     ) {
-        return new parent($id, $name, $startAt, $endAt);
+        return new parent($id, $name, $startAt, $endAt, $submitsOpen, $status);
     }
 }
